--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- Section 4: Air Rifle -->
         <section class="section activity-section" id="shooting">
             <div class="activity-bg">
-                <img src="images/target_range_scene.jpg" alt="Air rifle target range" loading="lazy">
+                <img src="images/target_range_scene.png" alt="Air rifle target range" loading="lazy">
             </div>
             <div class="activity-overlay"></div>
 
